--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
       },
       {
         "pagePath": "pages/publishRequirement/index",
-        "text": "需求",
+        "text": "发布需求",
         "iconPath": "icons/_publishRequirement.png",
         "selectedIconPath": "icons/publishRequirement.png"
       },
