--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,5 @@
 {
-  "appid": "touristappid",
+  "appid": "wxf6256b9192bdadd5",
   "compileType": "miniprogram",
   "libVersion": "2.32.1",
   "packOptions": {
